ing.yaml
  apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    name: rocketchat-ingress
  spec:
    rules:
    - host: rocket.serg470.ru
      http:
        paths:
        - backend:
            serviceName: rocketchat-rocketchat
            servicePort: 80
          path: /
    tls:
    - hosts:
      - rocket.serg470.ru
      secretName: rocket-tls
#  status:
#    loadBalancer:
#      ingress:
#      - ip: 116.202.104.213
